# jaxn

./: Makefile  README.md  pyproject.toml  states.md
demo/: demo.py  message.json  stream_debug.py
jaxn/: __init__.py  buffers.py  context.py  extractor.py  handler.py  jaxn.py  parser.py  stack_tracker.py  state_machine.py  states.py  tracker.py
streaming_json_parser/: __init__.py  streaming_json_parser.py
tests/: test_array_callbacks.py  test_array_field_end.py  test_array_field_start.py  test_boundary_conditions.py  test_callback_interactions.py  test_complex_nested.py  test_edge_cases.py  test_escape_demo.py  test_parsed_values.py  test_path_parser.py  test_rag_example_tags.py  test_streaming_json_parser.py  test_unicode_escape.py
tests/states/: test_state_transitions.py
