[project]
name = "jaxn"
version = "0.1.0"
description = "A SAX-style JSON parser for processing incomplete JSON streams"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Alexey Grigorev"}
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
