[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streaming-json-parser"
description = "A SAX-style JSON parser for processing incomplete JSON streams"
dynamic = ["version"]
readme = "README.md"
license = {text = "WTFPL"}

authors = [
    {name = "Alexey Grigorev", email = "alexey@datatalks.club"},
]
maintainers = [
    {name = "Alexey Grigorev", email = "alexey@datatalks.club"},
]

keywords = ["json", "streaming-parser"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "hatch>=1.15.1",
    "pytest>=8.3.5",
]

[project.urls]
Homepage = "https://github.com/alexeygrigorev/streaming_json_parser"
Repository = "https://github.com/alexeygrigorev/streaming_json_parser"
Issues = "https://github.com/alexeygrigorev/streaming_json_parser/issues"

[tool.hatch.build.targets.wheel]
packages = ["streaming_json_parser"]

[tool.hatch.version]
path = "streaming_json_parser/__version__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"

