[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaxn"
description = "A SAX-style JSON parser for processing incomplete JSON streams"
dynamic = ["version"]
readme = "README.md"
license = {text = "WTFPL"}

authors = [
    {name = "Alexey Grigorev", email = "alexey@datatalks.club"},
]
maintainers = [
    {name = "Alexey Grigorev", email = "alexey@datatalks.club"},
]

keywords = ["json", "streaming-parser"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "hatch>=1.15.1",
    "pytest>=8.3.5",
]

[project.urls]
Homepage = "https://github.com/alexeygrigorev/jaxn"
Repository = "https://github.com/alexeygrigorev/jaxn"
Issues = "https://github.com/alexeygrigorev/jaxn/issues"

[tool.hatch.build.targets.wheel]
packages = ["jaxn"]

[tool.hatch.version]
path = "jaxn/__version__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"

